--- a/styles/style.css
+++ b/styles/style.css
@@ -91,16 +91,21 @@ body {
 }
 
 .header_btn {
-    border: none;
     max-width: 350px;
+    width: 100%;
+    height: 100px;
+}
+
+.header_btn button {
+    border: none;
     width: 100%;
     height: 100px;
     border-radius: 50px;
     background-color: var(--primary);
     transition: 0.3s;
-}
-
-.header_btn a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     color: #FFF;
     font-size: 24px;
     font-weight: 500;
@@ -109,11 +114,8 @@ body {
     text-decoration: none;
 }
 
-.header_btn:hover {
+.header_btn button:hover {
     background-color: var(--primary-hover);
-}
-
-.header_btn:hover a {
     color: #000;
 }
 
@@ -214,7 +216,7 @@ body {
     background-image: url('/assets/images/owner_1.png');
     filter: blur(100px);
     width: 100%;
-    height: 50%;
+    height: 70%;
 }
 
 .owner_photo_blur.second {
@@ -502,13 +504,32 @@ input::-webkit-inner-spin-button {
     background: rgba(40, 40, 40, 0.50);
     backdrop-filter: blur(30.940000534057617px);
     padding: 30px 20px;
+    cursor: pointer;
 }
 
 .service_card_img {
     height: 300px
 }
 
+.service_card_img_blur {
+    position: absolute;
+    background-image: url('/assets/images/service_1.png');
+    filter: blur(100px);
+    width: 100%;
+    height: 12%;
+}
+
+.service_card_img_blur.second {
+    background-image: url('/assets/images/service_2.png');
+}
+
+.service_card_img_blur.third {
+    background-image: url('/assets/images/service_3.png');
+}
+
 .service_card_img img {
+    position: relative;
+    z-index: 1;
     border-radius: 50px;
     object-fit: fill;
     width: 99%;
@@ -523,6 +544,8 @@ input::-webkit-inner-spin-button {
 }
 
 .service_card_info {
+    position: relative;
+    z-index: 3;
     border-radius: 30px;
     background: rgba(40, 40, 40, 0.60);
     backdrop-filter: blur(30.940000534057617px);
@@ -565,6 +588,10 @@ input::-webkit-inner-spin-button {
     color: #fff;
     margin-top: 50px;
     transition: 0.3s;
+    cursor: pointer;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
 }
 
 .price_card:hover {
@@ -708,6 +735,62 @@ footer {
 }
 
 /* Footer end */
+
+/* Prices */
+
+.top_bg {
+    width: 100%;
+    height: 200px;
+    border-radius: 50px;
+    background-image: url('/assets/images/price_bg_popular.png');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+
+.top_title {
+    border-radius: 30px;
+    background: rgba(40, 40, 40, 0.50);
+    backdrop-filter: blur(30.940000534057617px);
+    width: fit-content;
+    padding: 36px 44px;
+    color: #FFF;
+    font-size: 24px;
+    font-weight: 700;
+    margin-top: -50px;
+    margin-left: 50px;
+    margin-bottom: 100px;
+}
+
+.price_card.second {}
+
+.price_card.second .price_card_row {
+    margin: 0 15px;
+    margin-bottom: 25px;
+    color: #FFF;
+    font-size: 24px;
+    font-weight: 600;
+}
+
+.price_card.second .price_card_row:last-child {
+    margin-bottom: 0;
+}
+
+.price_card.second .title {
+    color: #FFF;
+    font-size: 36px;
+    font-weight: 700;
+}
+
+.text-center {
+    text-align: center;
+}
+
+.mb-50 {
+    margin-bottom: 50px;
+}
+
+/* Prices end */
 
 @media (max-width: 992px) {
     .header_wrapper {
