--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -63,21 +63,12 @@ html,
 body {
 	padding: 0;
 	margin: 0;
+	font-family: 'VelaSans';
+	background-color: #FEF6F6;
+}
 
-	font-family:
-		'VelaSans'
-		Inter,
-		-apple-system,
-		BlinkMacSystemFont,
-		Segoe UI,
-		Roboto,
-		Oxygen,
-		Ubuntu,
-		Cantarell,
-		Fira Sans,
-		Droid Sans,
-		Helvetica Neue,
-		sans-serif;
+body {
+	padding: 20px;
 }
 
 a {
@@ -136,4 +127,89 @@ img {
 
 .fz34 {
 	font-size: 34px;
+}
+
+.mb-100 {
+	margin-bottom: 100px;
+}
+
+ul {
+	list-style-type: none;
+	padding-left: 0;
+}
+
+.block_01 {
+	display: flex;
+	gap: 20px;
+	min-height: 1000px;
+}
+
+.block_01 .left_card {
+	position: relative;
+	width: 100%;
+	border-radius: 30px;
+	background: #FFF;
+	background-image: url('/images/bg_logo.png');
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: cover;
+	/* background: linear-gradient(180deg, rgba(255, 255, 255, 0.00) 0%, rgba(255, 255, 255, 0.20) 100%), url('/images/bg_logo.png') lightgray 50% / cover no-repeat; */
+	padding: 50px;
+}
+
+.navigation {
+	display: flex;
+	flex-direction: column;
+	gap: 10px;
+}
+
+.navigation li {
+	color: #3F3F3F;
+	font-size: 24px;
+	text-transform: uppercase;
+	cursor: pointer;
+}
+
+.block_01 .left_card h1 {
+	position: absolute;
+	left: 50px;
+	bottom: 50px;
+
+	color: rgba(25, 103, 242, 0.50);
+	font-family: 'Unbounded';
+	font-size: 48px;
+	font-weight: 600;
+	text-transform: uppercase;
+}
+
+.block_01 .left_card h1 span {
+	color: var(--primary);
+}
+
+.block_01 .right_card {
+	width: 100%;
+}
+
+.circles {
+	display: flex;
+	align-items: center;
+}
+
+.circles div {
+	width: 36px;
+	height: 36px;
+	border-radius: 100px;
+
+}
+
+.circles.primary div:nth-child(1) {
+	background: rgba(25, 103, 242, 0.20);
+}
+
+.circles.primary div:nth-child(2) {
+	background: rgba(25, 103, 242, 0.50);
+}
+
+.circles.primary div:nth-child(3) {
+	background: var(--primary);
 }
