--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -53,6 +53,7 @@
 
 :root {
 	--primary: #1967F2;
+	--text-color: #3F3F3F;
 }
 
 * {
@@ -68,12 +69,16 @@ body {
 }
 
 body {
-	padding: 20px;
+	font-size: 24px;
 }
 
 a {
 	color: inherit;
 	text-decoration: none;
+}
+
+p {
+	margin-bottom: 0;
 }
 
 img {
@@ -141,13 +146,17 @@ img {
 	margin-bottom: 100px;
 }
 
+.mb-10 {
+	margin-bottom: 10px;
+}
+
 ul {
 	list-style-type: none;
 	padding-left: 0;
 }
 
 section {
-	margin-bottom: 20px;
+	padding: 20px;
 }
 
 .card {
@@ -167,7 +176,6 @@ section {
 	position: relative;
 	width: 100%;
 	border-radius: 30px;
-	background: #FFF;
 	background-image: url('/images/bg_logo.png');
 	background-repeat: no-repeat;
 	background-position: center;
@@ -183,7 +191,7 @@ section {
 }
 
 .navigation li {
-	color: #3F3F3F;
+	color: var(--text-color);
 	font-size: 24px;
 	text-transform: uppercase;
 	cursor: pointer;
@@ -206,7 +214,112 @@ section {
 }
 
 .block_01 .right_card {
+	position: relative;
 	width: 100%;
+	min-width: 0px;
+	user-select: none;
+}
+
+.block_01 .right_card .left {
+	position: absolute;
+	top: 20px;
+	left: 20px;
+
+	display: flex;
+	flex-direction: column;
+	gap: 10px;
+}
+
+.block_01 .right_card .right {
+	position: absolute;
+	top: 20px;
+	right: 20px;
+
+	display: flex;
+	align-items: center;
+	gap: 10px;
+}
+
+.top-button {
+	display: flex;
+	width: 50px;
+	height: 50px;
+	padding: 8px;
+	justify-content: center;
+	align-items: center;
+	border-radius: 25px;
+	background: #D9D9D9;
+	border: none;
+	color: #fff;
+}
+
+.top-button.second {
+	background: rgba(217, 217, 217, 0.50);
+}
+
+.carousel-description {
+	padding: 12px 15px;
+	gap: 10px;
+	border-radius: 20px;
+	background: #D9D9D9;
+
+	color: var(--text-color);
+	font-size: 24px;
+	font-weight: 400;
+	line-height: 30px;
+	text-transform: uppercase;
+}
+
+.block_01 .slick-slide img {
+	min-height: 1000px;
+	object-fit: cover;
+	border-radius: 30px;
+}
+
+.block_01 .slick-dots {
+	bottom: 20px;
+	right: 20px;
+}
+
+.block_01 .slick-dots {
+	width: fit-content;
+	right: 20px;
+	bottom: 20px;
+
+	border-radius: 25px;
+	background: rgba(217, 217, 217, 0.50);
+	backdrop-filter: blur(50px);
+
+	display: flex !important;
+	align-items: center;
+	justify-content: center;
+	gap: 10px;
+	height: 50px;
+	padding: 15px;
+}
+
+.slick-dots li {
+	margin: 0;
+}
+
+.slick-dots li button {
+	border-radius: 50%;
+	background: rgba(255, 255, 255, 0.30);
+}
+
+.slick-dots li.slick-active button {
+	border-radius: 50%;
+	background-color: #fff;
+}
+
+.slick-dots li button::before {
+	display: none;
+}
+
+.block_01 .right_card .carousel img {
+	border-radius: 30px;
+	height: 1000px;
+	object-fit: cover;
 }
 
 .circles {
@@ -218,7 +331,6 @@ section {
 	width: 36px;
 	height: 36px;
 	border-radius: 100px;
-
 }
 
 .circles.primary div:nth-child(1) {
@@ -231,6 +343,22 @@ section {
 
 .circles.primary div:nth-child(3) {
 	background: var(--primary);
+}
+
+.circles.orange div:nth-child(1) {
+	background: rgba(222, 91, 0, 0.20);
+}
+
+.circles.orange div:nth-child(2) {
+	background: rgba(222, 91, 0, 0.50);
+}
+
+.circles.orange div:nth-child(3) {
+	background: #DE5B00;
+}
+
+.text-orange {
+	color: #DE5B00;
 }
 
 .block_2 {
@@ -259,7 +387,7 @@ section {
 }
 
 .block_3 p {
-	color: #3F3F3F;
+	color: var(--text-color);
 	font-size: 24px;
 	line-height: 30px;
 }
@@ -317,7 +445,7 @@ section {
 }
 
 .tag-list li {
-	color: #3F3F3F;
+	color: var(--text-color);
 	font-size: 44px;
 
 	display: flex;
@@ -329,4 +457,496 @@ section {
 	height: 29px;
 	border-radius: 10px;
 	background: #8CB3F9;
+}
+
+.block_4 {
+	display: flex;
+	align-items: center;
+	gap: 20px;
+}
+
+.block_4 .card {
+	width: 100%;
+	min-height: 455px;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+}
+
+.block_4 .top {
+	font-size: 36px;
+	color: var(--text-color);
+	font-weight: 600;
+	margin-bottom: 0;
+}
+
+.block_4 .bottom {
+	font-family: 'Unbounded';
+	font-size: 128px;
+	color: var(--primary);
+	font-weight: 500;
+	line-height: normal;
+	margin-bottom: 0;
+}
+
+.block_5 {
+	display: flex;
+	min-height: 600px;
+}
+
+.block_5 .slick-slide img {
+	min-height: 600px;
+}
+
+.block_5 .card {
+	position: relative;
+	width: 100%;
+	border-radius: 30px;
+	background: #FFF;
+	background-image: url('/images/bg_logo.png');
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: cover;
+
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+}
+
+.block_5 .card .title {
+	color: #000;
+	font-family: 'Unbounded';
+	font-size: 48px;
+	font-weight: 600;
+	line-height: normal;
+	text-transform: uppercase;
+	margin-bottom: 0;
+}
+
+.block_5 .card .description {
+	color: var(--text-color);
+	font-size: 24px;
+	line-height: normal;
+}
+
+.block_6 {
+	display: flex;
+	align-items: center;
+	gap: 20px;
+
+}
+
+.block_6 .card {
+	width: 100%;
+	min-height: 455px;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+
+	color: var(--text-color);
+	font-size: 36px;
+	font-weight: 600;
+	line-height: normal;
+	text-transform: uppercase;
+}
+
+.block_6 .card b {
+	font-family: 'Unbounded';
+	font-weight: 800;
+}
+
+.block_7 {
+	color: var(--text-color);
+	font-family: 'Unbounded';
+	font-size: 48px;
+	font-weight: 600;
+	text-transform: uppercase;
+}
+
+.block_7 .card {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+}
+
+.big-circles {
+	position: relative;
+	display: flex;
+}
+
+.big-circles div {
+	width: 180px;
+	height: 180px;
+	border-radius: 100px;
+	transition: 0.3s;
+}
+
+.big-circles.primary div:nth-child(1) {
+	background: rgba(25, 103, 242, 0.20);
+}
+
+.big-circles.primary:hover div:nth-child(2),
+.big-circles.primary:hover div:nth-child(3),
+.big-circles.primary:hover div:nth-child(4) {
+	margin-left: 0;
+}
+
+.big-circles.primary div:nth-child(2) {
+	margin-left: -90px;
+	background: rgba(25, 103, 242, 0.30);
+}
+
+.big-circles.primary div:nth-child(3) {
+	margin-left: -90px;
+	background: rgba(25, 103, 242, 0.50);
+}
+
+.big-circles.primary div:nth-child(4) {
+	margin-left: -90px;
+	background: var(--primary);
+}
+
+.block_8 {
+	display: flex;
+	flex-wrap: wrap;
+	gap: 20px;
+}
+
+.block_8 .card {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	gap: 10px;
+	width: calc(50% - 10px);
+}
+
+.block_8 .card .images {
+	display: flex;
+	gap: 10px;
+}
+
+.block_8 .card .title {
+	color: var(--text-color);
+	font-family: 'Unbounded';
+	font-size: 48px;
+	font-weight: 600;
+	text-transform: uppercase;
+}
+
+.block_8 .card .description {
+	color: var(--text-color);
+	font-family: "Vela Sans GX";
+	font-size: 24px;
+	font-weight: 400;
+}
+
+.block_8 .card .right {
+	display: flex;
+	justify-content: flex-end;
+	align-items: center;
+	gap: 20px;
+	width: 100%;
+}
+
+.block_8 .card .left-btn {
+	height: 100px;
+	max-width: 255px;
+	width: 100%;
+
+	border-radius: 26px;
+	border: 1px solid rgba(25, 103, 242, 0.50);
+	box-shadow: 0px 0px 29px 0px rgba(25, 103, 242, 0.04) inset;
+	background-color: transparent;
+
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	gap: 20px;
+	text-align: start;
+	padding: 0 20px;
+
+	color: var(--text-color);
+	font-family: "Vela Sans GX";
+	font-size: 24px;
+	font-weight: 700;
+	line-height: 25px;
+}
+
+.block_8 .card .right-btn {
+	height: 100px;
+	max-width: 255px;
+	width: 100%;
+
+	border-radius: 100px;
+	background: #1967F2;
+	color: #fff;
+	border: none;
+	outline: none;
+	text-transform: uppercase;
+}
+
+.block_9 .card {
+	min-height: 350px;
+	background-image: url('/images/block_9_bg_1.png'), url('/images/block_9_bg_2.png');
+	background-repeat: no-repeat, no-repeat;
+	background-position: left 100px bottom, right 100px bottom;
+	background-size: 460px 270px, 460px 270px;
+
+	display: flex;
+	padding: 50px;
+	justify-content: center;
+	align-items: center;
+	gap: 30px;
+	align-self: stretch;
+	border-radius: 240px;
+}
+
+.block_9 .title {
+	color: var(--text-color);
+	text-align: center;
+	font-family: 'Unbounded';
+	font-size: 48px;
+	font-weight: 600;
+	line-height: normal;
+	text-transform: uppercase;
+}
+
+.block_9 button {
+	height: 100px;
+	max-width: 360px;
+	width: 100%;
+	border-radius: 100px;
+	background: linear-gradient(85deg, #0A52D2 0%, #1967F2 37%, #75A7FF 100%);
+	border: none;
+
+	color: #FFF;
+
+	font-family: "Vela Sans GX";
+	font-size: 24px;
+	font-weight: 700;
+	line-height: 25px;
+	text-transform: uppercase;
+}
+
+.block_10 {
+	display: flex;
+	gap: 20px;
+}
+
+.block_10 .card {
+	width: 100%;
+	min-height: 455px;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+}
+
+.block_10 .card .title {
+	color: var(--text-color);
+	font-size: 36px;
+	font-weight: 800;
+	text-transform: uppercase;
+}
+
+.block_10 .card .title b {
+	font-family: 'Unbounded';
+	font-weight: 800;
+}
+
+.block_10 .card button {
+	display: flex;
+	max-width: 240px;
+	max-height: 240px;
+	width: 100%;
+	height: 100%;
+	padding: 60px;
+	align-items: center;
+	gap: 10px;
+	flex-shrink: 0;
+
+	border-radius: 50px;
+	border: 5px solid rgba(25, 103, 242, 0.50);
+	background: rgba(25, 103, 242, 0.00);
+}
+
+footer {
+	background-color: #fff;
+	height: 400px;
+	border-radius: 30px;
+	padding: 20px;
+	margin-top: 30px;
+	background-image: url('/images/xeond_logo.png');
+	background-repeat: no-repeat;
+}
+
+footer .xeond {
+	height: 100%;
+	font-family: 'Unbounded';
+	color: var(--primary);
+	font-size: 20px;
+	font-weight: 600;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	padding-left: 290px;
+	text-transform: uppercase;
+}
+
+footer .xeond_title {
+	color: var(--primary);
+	font-family: 'Unbounded';
+	font-size: 48px;
+	font-style: normal;
+	font-weight: 600;
+	line-height: normal;
+	text-transform: uppercase;
+}
+
+footer .xeond_subtitle {
+	color: rgba(25, 103, 242, 0.50);
+}
+
+footer .social-medias {
+	height: 100%;
+	display: flex;
+	gap: 20px;
+}
+
+footer .social-media {
+	height: 100%;
+	width: 100%;
+	padding: 30px;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	background-color: #FEF6F6;
+	border-radius: 20px;
+
+	color: var(--text-color);
+	font-size: 36px;
+	font-weight: 600;
+	text-transform: uppercase;
+	text-decoration: none;
+}
+
+footer .social-media img {
+	width: 100px;
+	height: 100px;
+}
+
+.mobile-show {
+	display: none !important;
+}
+
+header {
+	display: none;
+}
+
+.project-row {
+	display: flex;
+	align-items: center;
+	gap: 20px;
+}
+
+.project-row .card {
+	width: 100%;
+	height: 100%;
+	min-height: 600px;
+	background-image: url('/images/bg_logo.png');
+	background-repeat: no-repeat;
+	background-position: bottom center;
+	background-size: cover;
+
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+}
+
+.project-row .card .title {
+	color: #1967F2;
+	font-family: 'Unbounded';
+	font-size: 48px;
+	font-style: normal;
+	font-weight: 600;
+	line-height: normal;
+	text-transform: uppercase;
+}
+
+.project-row .card .card-content {
+	width: calc(50% - 10px);
+	min-height: 170px;
+	border-radius: 10px;
+	border: 2px solid #8CB3F9;
+	backdrop-filter: blur(20px);
+	padding: 15px;
+
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+}
+
+.project-row .card .card-content .top {
+	color: var(--text-color);
+	font-family: 'Unbounded';
+	font-size: 24px;
+	font-weight: 400;
+}
+
+.project-row .card .card-content .bottom {
+	color: var(--text-color);
+	font-size: 24px;
+}
+
+.project-row .card .description {
+	color: var(--text-color);
+	font-size: 24px;
+}
+
+.project-img {
+	width: 100%;
+	text-align: center;
+}
+
+.project-img img {
+	/* width: 100%; */
+	object-fit: cover;
+}
+
+.portfolio-header {
+	position: relative;
+	width: 100%;
+	min-height: 600px;
+	padding: 50px;
+	border-radius: 30px;
+}
+
+.portfolio-header.frontend {
+	background-image: url('/images/frontend_bg.png');
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: cover;
+}
+
+.portfolio-header .bottom {
+	position: absolute;
+	bottom: 50px;
+	left: 0;
+	width: 100%;
+	padding: 0 50px;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.portfolio-header .title {
+	color: #FFF;
+	font-family: 'Unbounded';
+	font-size: 48px;
+	font-weight: 600;
+	text-transform: uppercase;
+}
+
+.portfolio-header .title.second {
+	color: rgba(255, 255, 255, 0.50);
+	text-align: end;
 }
