--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -842,14 +842,24 @@ header {
 	display: none;
 }
 
+.projects {
+	display: flex;
+	flex-direction: column;
+	gap: 20px;
+}
+
 .project-row {
 	display: flex;
 	align-items: center;
 	gap: 20px;
 }
 
+.project-row:nth-child(2n) {
+	flex-direction: row-reverse;
+}
+
 .project-row .card {
-	width: 100%;
+	width: 50%;
 	height: 100%;
 	min-height: 600px;
 	background-image: url('/images/bg_logo.png');
@@ -903,7 +913,7 @@ header {
 }
 
 .project-img {
-	width: 100%;
+	width: calc(50%);
 	text-align: center;
 }
 
@@ -918,13 +928,25 @@ header {
 	min-height: 600px;
 	padding: 50px;
 	border-radius: 30px;
-}
-
-.portfolio-header.frontend {
-	background-image: url('/images/frontend_bg.png');
 	background-repeat: no-repeat;
 	background-position: center;
 	background-size: cover;
+}
+
+.portfolio-header.frontend {
+	background-image: url('/images/portfolio/frontend_bg.png');
+}
+
+.portfolio-header.backend {
+	background-image: url('/images/portfolio/frontend_bg.png');
+}
+
+.portfolio-header.ux {
+	background-image: url('/images/portfolio/frontend_bg.png');
+}
+
+.portfolio-header.graphic {
+	background-image: url('/images/portfolio/frontend_bg.png');
 }
 
 .portfolio-header .bottom {
