--- a/src/styles/adaptive.css
+++ b/src/styles/adaptive.css
@@ -28,7 +28,7 @@
         line-height: normal;
     }
 
-    .block_4 .d-flex {
+    .block_4 {
         overflow: auto;
     }
 
@@ -236,7 +236,7 @@
 
         position: fixed;
         top: 0;
-        z-index: 1;
+        z-index: 2;
         width: 100%;
         padding: 25px;
 
