--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -65,7 +65,7 @@ body {
 	padding: 0;
 	margin: 0;
 	font-family: 'VelaSans';
-	background-color: #FEF6F6;
+	background-color: inherit;
 }
 
 body {
@@ -514,7 +514,6 @@ section {
 }
 
 .block_5 .card .title {
-	color: #000;
 	font-family: 'Unbounded';
 	font-size: 48px;
 	font-weight: 600;
