--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -33,3 +33,8 @@ body.dark .bottom-bar {
 	border: 1px solid #373737;
 	background: rgba(0, 0, 0, 0.70);
 }
+
+body.dark .header-button {
+	background: rgba(38, 38, 38, 0.50);
+	color: #fff;
+}
