--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -38,3 +38,7 @@ body.dark .header-button {
 	background: rgba(38, 38, 38, 0.50);
 	color: #fff;
 }
+
+.project-images-card {
+	background-color: #1A1A1A;
+}
