--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -90,6 +90,57 @@ img {
 	height: auto;
 }
 
+.d-flex {
+	display: -webkit-box !important;
+	display: -ms-flexbox !important;
+	display: flex !important;
+}
+
+.flex-column {
+	flex-direction: column;
+}
+
+.justify-content-start {
+	-webkit-box-pack: start !important;
+	-ms-flex-pack: start !important;
+	justify-content: flex-start !important;
+}
+
+.justify-content-end {
+	-webkit-box-pack: end !important;
+	-ms-flex-pack: end !important;
+	justify-content: flex-end !important;
+}
+
+.justify-content-center {
+	-webkit-box-pack: center !important;
+	-ms-flex-pack: center !important;
+	justify-content: center !important;
+}
+
+.justify-content-between {
+	-webkit-box-pack: justify !important;
+	-ms-flex-pack: justify !important;
+	justify-content: space-between !important;
+}
+
+.justify-content-around {
+	-ms-flex-pack: distribute !important;
+	justify-content: space-around !important;
+}
+
+.align-items-center {
+	align-items: center;
+}
+
+.text-end {
+	text-align: end;
+}
+
+.text-center {
+	text-align: center;
+}
+
 .fz12 {
 	font-size: 12px !important;
 }
@@ -528,7 +579,7 @@ section {
 	min-height: 600px;
 }
 
-.block_5  .right_card_img {
+.block_5 .right_card_img {
 	min-height: 600px;
 }
 
@@ -586,6 +637,36 @@ section {
 .block_6 .card b {
 	font-family: 'Unbounded';
 	font-weight: 800;
+}
+
+.block_6 .card img {
+	position: relative;
+	z-index: 2;
+}
+
+.block_6 .arrow-circle {
+	position: absolute;
+	right: 0;
+	bottom: 0;
+
+	opacity: 0;
+	visibility: hidden;
+
+	width: 240px;
+	height: 240px;
+	border-radius: 50%;
+	border: 4px solid #1967F2;
+
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.block_6 .card:hover .arrow-circle {
+	right: 100%;
+	transform: translateX(100%);
+	opacity: 1;
+	visibility: visible;
 }
 
 .block_7 {
