--- a/src/styles/adaptive.css
+++ b/src/styles/adaptive.css
@@ -392,4 +392,13 @@
 	.project-images .project-images-card img {
 		width: calc(50% - 5px);
 	}
+
+	.price-title {
+		font-size: 24px;
+	}
+
+	p.point::before {
+		left: 17px;
+		top: 8px;
+	}
 }
