--- a/src/styles/adaptive.css
+++ b/src/styles/adaptive.css
@@ -70,7 +70,7 @@
 	.block_4,
 	.block_6,
 	.block_10 {
-		display: grid;
+		display: flex;
 		grid-template-columns: repeat(1, 1fr);
 		gap: 10px;
 	}
